--- a/begriffe.tex
+++ b/begriffe.tex
@@ -3,12 +3,12 @@
 
 Diese Erklärung der Begriffe und Elemente verfolgt zwei Ziele.
 Zum Einen stellt dieses die Grundlage des gesamten Themas dar und soll für Interessierte, die nicht so vertraut sind, eine Einführung in die Thematik bieten. 
-Und zum Anderen werden viele dieser Begriffe erläutert, welche noch häufig zum Einsatz kommen (u.A. Neuron, Aktivierungsfunktion, …).
+Und zum Anderen werden viele der Begriffe erläutert, die in dieser Arbeit noch häufig zum Einsatz kommen werden (u.A. Neuron, Aktivierungsfunktion, …).
 
 \section{Data Science}
 
 Data Science wird generell als die Extraktion von Wissen aus Daten bezeichnet. 
-Dabei werden die Fachbereiche Statistik und Mathematik, Informatik und Machine Learning, sowie einige weitere mit diesem Begriff zusammengefasst. 
+Dabei werden die Fachbereiche Statistik und Mathematik, Informatik und Machine Learning, sowie einige weitere zu diesem Begriff zusammengefasst. 
 Das Gebiet für sich wird auch als Berufstätigkeit bezeichnet, wobei meist spezialisierte Formen für die Berufsbezeichnung verwendet werden. \newline
 
 \noindent 
@@ -22,11 +22,11 @@ Aus diesem gelernten Wissen besteht zusätzlich die Möglichkeit, dieses zum Gen
 
 \section{Machine Intelligence}
 
-Machine Intelligence ist ein Begriff, der noch nicht definiert worden ist, aber schon Verwendung findet. 
+Machine Intelligence ist ein Begriff, der noch nicht eindeutig definiert worden ist, aber schon Verwendung findet. 
 Einige namhafte Unternehmen wie Google Inc. und Microsoft Corporation bieten jeweils unterschiedliche Definitionen oder Beschreibungen. 
 Die Definitionen dieser Firmen weichen nur unwesentlich voneinander ab.
 %Dieser wird aber von allen ähnlich beschrieben und definiert.
-Dieser Begriff wird als Überbegriff über das gesamte Gebiet mit Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und alle Themen, die in näherer Beziehung dazu stehen, verwendet. 
+Dieser Begriff wird als Überbegriff für das gesamte Gebiet von Machine Learning, Künstlicher Intelligenz, Konversationsintelligenz und allen Bereichen, die in näherer Beziehung dazu stehen, verwendet. 
 
 \section{Machine Learning}
 \label{sec:Machine Learning}
@@ -35,16 +35,16 @@ Machine Learning definiert eine große Anzahl an Theorien und Umsetzungen von ni
 Diese wurden aus Studien in den Bereichen der Mustererkennung und der rechnerischen Lerntheorie mit Künstlicher Intelligenz teilweise entwickelt. 
 Dieses Gebiet umfasste im Jahr 2016 aber sehr viel mehr. 
 So existieren zusätzliche Ansätze aus dem Bereich der Biologie, wie zum Beispiel Neuronale Netzwerke, die dem Gehirn nachempfunden sind und genetische Algorithmen, die der Weiterentwicklung eines Lebewesens ähneln. 
-Ein ganz anderer Zugang wurde in der Sowjetunion verfolgt, mit sogenannten 'Support Vektor Machines', bei welchem man einen rein mathematischen Ansatz anstrebt \cite{lampropoulos2015machine}. 
+Ein ganz anderer Zugang wurde in der Sowjetunion verfolgt, mit sogenannten 'Support Vektor Machines', bei welchem man einen rein mathematischen Ansatz anstrebte \cite{lampropoulos2015machine}. 
 
 \section{Neuronale Netzwerke}
 
 %Neuronale Netzwerke sind seit einigen Jahren auch bekannt unter dem Begriff 'Deep Learning'. \newline
 
 %\noindent 
-Die Theorie und die ersten Grundlagen wurden im Jahre 1943 von Warrn McCulloch und Walter Pitts geschaffen, die ein Modell entwickelten, jedoch nicht die technischen Möglichkeiten hatten dieses umzusetzen.
+Die Theorie und die ersten Grundlagen wurden im Jahre 1943 von Warren McCulloch und Walter Pitts geschaffen, die ein Modell entwickelten, jedoch nicht die technischen Möglichkeiten hatten dieses umzusetzen.
 Dieses %basierte auf Mathematik und Algorithmen und 
-führte zur 'Threshold Logik', welche bestimmt ab wann etwas weitergegeben wird und wie stark ausgeprägt \cite{rojas2013neural}. 
+führte zur 'Threshold Logik', welche bestimmt, ab wann und wie stark ausgeprägt etwas weitergegeben wird \cite{rojas2013neural}.
 %\textbf{TODO: beschreiben}
 Durch die Entwicklung des 'Backpropagation'-Algorithmus ist es möglich, Netzwerke mit mehr als drei Ebenen zu trainieren.
 %Durch den Grundstein des 'Backpropagation'-Algorithmus im Jahre 1975 ist es möglich, Netzwerke mit mehr als drei Ebenen zu trainieren. 
@@ -84,7 +84,7 @@ Neuronale Netzwerke bestehen aus Neuronen, die miteinander verbunden sind und ge
 \end{figure}
 
 %\noindent 
-Ein Neuron wurde einer Nervenzelle in einem Gehirn nachempfunden mit den folgenden Bestandteilen:
+Ein Neuron wurde einer Nervenzelle in einem Gehirn mit den folgenden Bestandteilen nachempfunden:
 \paragraph{Informationseingangsstrom} ist der Dateneingang, wobei ein Neuron ein bis theoretisch beliebig viele solcher Eingänge haben kann. 
 Dies hängt von der jeweiligen Architektur des Netzwerks ab.
 
@@ -98,7 +98,7 @@ Im einfachsten Fall werden alle Werte aufsummiert.
 Es wäre aber möglich, jegliche Berechnung hier einfließen zu lassen, welche mehrere Werte verwendet und daraus einen neuen Wert berechnet.
 
 \paragraph{Aktivierungsfunktion} berechnet den Ausgang eines Neurons. 
-Dabei wird eine weitere Funktion auf das im Kern berechnete Ergebnis ausgeführt und führt dazu, dass ein Ergebnis noch stärker ausgeprägt weitergegeben wird oder minimiert wird, beziehungsweise in einen Wertebereich eingepasst wird. 
+Dabei wird eine weitere Funktion auf das im Kern berechnete Ergebnis ausgeführt und das dazu führt, dass ein Ergebnis noch stärker ausgeprägt weitergegeben wird oder minimiert wird, beziehungsweise in einen Wertebereich eingepasst wird. 
 Diese Aktivierungsfunktion ist meist die Sigmoid-Funktion oder eine lineare Funktion, welcher in der Abbildung \ref{fig:Aktivierungsfunktion} zu erkennen sind.
 
 %\textit{Grafiken zu Sigmoid und lineare}
@@ -279,6 +279,23 @@ Eine zu hohe Rate würde nicht zum Konvergieren führen, sondern zum Springen.
 Dabei werden mit dem definierten Faktor die früheren Gewichtsupdates berücksichtigt. 
 Dies führt dazu, dass lokale Tiefpunkte überwunden werden können und das System doch zum globalen Tiefpunkt konvergiert.
 
+\section{Trainieren}
+
+\paragraph{Überwachtes Trainieren} definiert, dass die Daten, welche zur Verfügung stehen aus zwei Teilen bestehen.
+Erstens aus den Daten selbst, aus welchen gelernt und verstanden werden soll.
+Zweitens aus den Ergebnissen, zu welchen das Netzwerk kommen sollte, welche meistens als Lable bezeichnet werden. 
+In dieser Situation liefert das Netzwerk ein Ergebnis, welches mit dem erwarteten Wert verglichen werden kann.
+Dieser Unterschied wird zum Feststellen des Fehlers verwendet, welcher besagt, wie inkorrekt das Ergebnis ist.
+Des Weiteren wird dieser Fehlerwert für die Backpropagation benötigt.
+
+\paragraph{Unüberwachtes Trainieren} kommt dann zu tragen, wenn nur Daten zum Trainieren zur Verfügung stehen.
+Der erwartete Ausgang ist unbekannt.
+Diese Strategie wird in Fällen von Clustering (\ref{subsec:Clustering}) verwendet.
+Dabei sollen nicht bekannte Gruppen von zusammengehörenden Daten identifiziert werden. 
+Self-Organizing Maps (\ref{subsec:SelfOrganizingMap}) entdecken zusammengehörende Muster und geben diese in einer Grafik zur weiteren Interpretation weiter. 
+Diese Technik ist insbesondere interessant, da einem Netzwerk nie erklärt worden ist, warum etwas so ist und steht damit in Relation zu einem natürlichen Lernprozess, wie bei einem Menschen.
+%nur die Eingangsdaten werden zur Verfügung gestellt - der erwartete Ausgang wird nicht zur Verfügung gestellt
+
 %\textit{\textbf{TODO}}
 \section{Allgemeine Probleme}
 \label{sec:AllgeProb}
@@ -297,7 +314,7 @@ Diese Arbeit wird auf die bekanntesten Probleme eingehen und auch Lösungen oder
 %\subsection{Overfitting}
 
 \paragraph{Overfitting} bezeichnet ein Problem, welches nicht nur Machine Learning betrifft, sondern auch Menschen und andere Lebewesen. 
-Ein Student lernt zum Beispiel auf eine Prüfung und ist im Besitz einer Klausur aus einem Vorjahr. 
+Ein Student lernt zum Beispiel für eine Prüfung und ist im Besitz einer Klausur aus einem Vorjahr. 
 Nach öfterem Durchspielen der Fragen und sich selbst testen, befindet er sich in der Lage diese Klausur mit einer sehr hohen Wahrscheinlichkeit zu bestehen. 
 Dabei hat sich die Klausur in seinem Gehirn eingeprägt, aber nicht das Stoffgebiet zu welchem er eine Klausur schreiben muss. 
 Das Problem wird als Overfitting bezeichnet und beschreibt, dass etwas gemerkt wurde, aber nicht gelernt worden ist und somit eine Abwandlung von Informationen nicht wiedererkannt wird.
@@ -305,33 +322,16 @@ Das Problem wird als Overfitting bezeichnet und beschreibt, dass etwas gemerkt w
 %\subsection{Daten & Datensätze}
 
 %TODO: jeder Datensatz ist unterschiedlich -> neue Daten = neues Netzwerk
-\paragraph{Daten} die zum Trainieren von Netzwerken verwendet werden, können selbst ein Probleme darstellen.
+\paragraph{Daten}, die zum Trainieren von Netzwerken verwendet werden, können selbst ein Probleme darstellen.
 % Ein weiteres Problem stellen die Daten und Datensätze dar, welche zum Trainieren des Netzwerkes verwendet werden.
 Eine zu geringe Menge an Daten stellt den Entwickler vor das Problem, dass er für diese Daten ein akkurates Netzwerk entwickeln kann, dieses aber im weiteren nicht die gewünschten Resultate liefern wird.
 %Ein solches Netzwerk wird sehr wahrscheinlich nicht die gewünschten Resultate liefern, da die zur Verfügung gestellten Daten nur einen kleinen Teil des Gesamten repräsentieren.
 %Dieses Netzwerk würde aber möglicherweise nicht die gewünschten Resultate liefern, da die zur Verfügung gestellten Daten nur einen kleinen Teil des Gesamten repräsentieren.
-Zusätzlich kann es sein, dass die zur Verfügung gestellten Daten selbst nicht vollständig sind und somit wieder nur ein Subset verwendet werden kann.
+Zusätzlich kann es sein, dass die zur Verfügung gestellten Daten selbst nicht vollständig sind und somit wieder nur ein Subset verwendet werden kann. \\
 
-\paragraph{Datensätze} können ähnlich sein zu anderen, sind aber trotzdem wieder einzigartig. 
-Dies bedeutet, dass ein Netzwerk, welches für eine Problemstellung entwickelt und trainiert wurde, nicht eins zu eins übernommen werden kann.
-Für diese Daten muss wieder ein Netzwerk entwickelt, beziehungsweise trainiert werden.
-
-\section{Trainieren}
-
-\paragraph{Überwachtes Trainieren} definiert, dass die Daten welche zur Verfügung stehen aus zwei Teilen bestehen.
-Erstens aus den Daten selbst, aus welchen gelernt und verstanden werden soll.
-Zweitens aus den Ergebnissen zu welchen das Netzwerk kommen sollte, welche meistens als Lable bezeichnet werden. 
-In diese Situation liefert das Netzwerk ein Ergebnis, welches mit dem erwarteten Wert verglichen werden kann.
-Dieser Unterschied wird zum Feststellen des Fehlers verwendet, welcher besagt, wie inkorrekt das Ergebnis ist.
-Des Weiteren wird dieser Fehlerwert für die Backpropagation benötigt.
-
-\paragraph{Unüberwachtes Trainieren} kommt dann zu tragen, wenn nur Daten zum Trainieren zur Verfügung stehen.
-Der erwartete Ausgang ist unbekannt.
-Diese Strategie wird in Fällen von Clustering (\ref{subsec:Clustering}) verwendet.
-Dabei sollen nicht bekannte Gruppen von zusammengehörenden Daten identifiziert werden. 
-Self-Organizing Maps (\ref{subsec:SelfOrganizingMap}) entdecken zusammengehörende Muster und geben dies in einer Grafik zur weiteren Interpretation weiter. 
-Diese Technik ist insbesondere interessant, da einem Netzwerk nie erklärt worden ist, warum etwas so ist und steht damit in Relation zu einem natürlichen Lernprozess, wie bei einem Menschen.
-%nur die Eingangsdaten werden zur Verfügung gestellt - der erwartete Ausgang wird nicht zur Verfügung gestellt
+%\paragraph{Datensätze} können ähnlich sein zu anderen, sind aber trotzdem wieder einzigartig. 
+%Dies bedeutet, dass ein Netzwerk, welches für eine Problemstellung entwickelt und trainiert wurde, nicht eins zu eins übernommen werden kann.
+%Für diese Daten muss wieder ein Netzwerk entwickelt, beziehungsweise trainiert werden.
 
 \section{Domänenklassen}
 \label{sec:Domänenklassen}
@@ -357,21 +357,25 @@ Im Falle einer Self-Organizing-Map werden die Gruppierungen selbst durch das Sys
 \subsection{Regression}
 \label{subsec:Regression}
 
-Regression beschreibt den Fall, in welchem Daten generiert werden und das kontinuierlich.
+Regression beschreibt den Fall, in welchem Rohdaten generiert werden und diese so Verwendet werden. 
+Dies kann im Sinne einer Klassifikation verstanden werden mit dem Unterschied, dass die Anzahl der Klassen unendlich ist wie der Reelle Zahlen von $[0 - 1]$. 
+%Regression beschreibt den Fall, in welchem Daten generiert werden und das kontinuierlich.
 Ein Anwendungsfall ist das Finden einer zugrundeliegenden Funktion, bei der nur Resultate dieser Funktion vorliegen. 
-Somit werden aus Daten weitere Daten erzeugt.
-So gibt es Abläufe in der Natur, welche approximiert werden, um sie für weitere Systeme möglicherweise zu verwenden \cite{bishop2006pattern}. 
+%So gibt es Abläufe in der Natur, welche approximiert werden, um sie für weitere Systeme möglicherweise zu verwenden \cite{bishop2006pattern}. 
+So gibt es Abläufe in der Natur, welche schwer in einer Funktion festgehalten werden kann. 
+In diesem Fall lässt sich ein Netzwerk mit den Aktionen und Reaktionen trainieren und erhält eine Approximation der Vorgänge \cite{bishop2006pattern}.
 
 \subsection{Klassifikation}
 \label{subsec:Classification}
 
-Das Klassifikation-Problem ist in gewisser Weise ähnlich den Regression-Problemen. 
+Bei der Klassifikation werden die Ergebnisse einer Regression, welchen meist als Gleitkommazahl vorliegen, auf eine bestimmte Anzahl an Klassen übertragen. 
+%Das Klassifikation-Problem ist in gewisser Weise ähnlich den Regression-Problemen. 
 Der Unterschied liegt im Ergebnis, welches produziert wird.  
 Hier werden Daten dem Netzwerk übergeben und dieses muss vorhersagen, zu welcher Klasse sie gehören. Dies wird in einer überwachten Umgebung durchgeführt. 
 Die Klassen für die Vorhersage sind vorab schon bekannt und können mit den Daten aus dem Outputlayer des Netzwerks verglichen werden und infolge Justierungen durchgeführt werden \cite{AI3}. \\
 
 \noindent
-Ergebnisse einer Klassifikation sagen aus, zu wie viel Prozent etwas auf den gegebenen Input zutrifft. 
+Ergebnisse einer Klassifikation sagen aus, mit welchem prozentualen Anteil etwas auf den gegebenen Input zutrifft. 
 Das Gesamtergebnis ergibt immer 100 Prozent. 
 Das Ergebnis bei einer Regression wird dabei nicht in Prozent angegeben, sondern stellt einen konkreten Wert dar.
 
@@ -379,7 +383,7 @@ Das Ergebnis bei einer Regression wird dabei nicht in Prozent angegeben, sondern
 \label{subsec:Predict}
 
 Predict-Problemstellungen kommen im Kontext von Business, beziehungsweise von E-Business zur Anwendung. 
-Hier muss anhand von meist zeitgesteuerten Ereignisse eine Vorhersage getroffen werden. 
+Hier muss anhand von meist zeitgesteuerten Ereignissen eine Vorhersage getroffen werden. 
 Zum Beispiel an der Börse ändern sich täglich die Kurse relativ rasch, sodass es für Menschen praktisch nicht mehr möglich ist, diese zu verfolgen. 
 Im Falle der Börse sind Aktienkurse mit zeitlichem Verlauf aus der Vergangenheit verfügbar. 
 Diese können als Trainingsdaten für ein Netzwerk verwendet werden, um den nächsten Tag möglicherweise vorherzusagen. 
@@ -402,7 +406,7 @@ Eines der Kernprobleme dabei ist, dass in Echtzeit etwas zur selben Zeit gelernt
 
 Computer Vision zielt darauf ab, einem Computer das Sehen und Verstehen von Bildern zu ermöglichen. 
 Diese Technik findet im Jahr 2016 schon häufig Einsatz. 
-So werden automatisiert Bilder analysiert, beschrieben sowie auch in Gruppen nach diversen Kategorien eingeordnet, wie zum Beispiel Gesichtsgefühlszustände.
+So werden automatisiert Bilder analysiert, beschrieben sowie auch in Gruppen nach diversen Kategorien eingeordnet, wie zum Beispiel nach Gesichtsausdrücken.
 Solche Dienste werden auch kommerziell eingesetzt und angeboten. 
 In autonom gesteuerten Fahrzeugen findet diese Technologie bereits Verwendung, um Objekte zu erkennen und zu verstehen. 
 So muss zum Beispiel ein Verkehrszeichen von einem Passanten unterschieden werden können.
@@ -431,9 +435,9 @@ Diese Netzwerktypen definieren Richtlinien oder Ansätze zu möglichen Netzwerke
 \subsection{FeedForward}
 \label{subsec:FeedForward}
 
-FeedForward Netzwerke (FFN) waren bis for einigen Jahren noch der Stand der Forschung.
+FeedForward Netzwerke (FFN) waren bis vor einigen Jahren noch der Stand der Forschung.
 Auf ihnen basieren einige andere Typen von Netzwerken, die bekanntesten werden in dieser Arbeit noch behandelt.
-Ein FFN basiert auf den Grundlagen eines Neurons, sowie dem Ausbauen dieses zu Ebenen mit mehreren Neuronen.
+Ein FFN basiert auf den Grundlagen eines Neurons, sowie ihrem Ausbauen dieses zu Ebenen mit mehreren Neuronen.
 So ein Netzwerk besitzt einen Inputlayer, einen Hiddenlayer sowie einen Outputlayer.
 Sobald das Netzwerk ein große Anzahl an Hiddenlayer aufweist, wird es als Deep FeedForward Netzwerk (\ref{subsec:DeepFeedForward}) bezeichnet.
 Das FFN weist dabei eine Charakteristik auf, in der der Datenfluss eindeutig definiert ist. 
@@ -464,7 +468,8 @@ Im Gegensatz zu anderen Netzwerken können Hopfield Netzwerke in einer Matrix ab
 %Die Neuronen selbst nehmen dabei den Zustand $1$ für wahr und $-1$ für falsch an.
 Das Problem bei diesem Typ ist, dass jedes Neuron auf dem Status des anderen aufbaut.
 Dies stellt ein Problem für die Reihenfolge der Berechnung dar, was zu einem nicht stabilen Zustand führt.
-Durch das Hinzugeben einer Energiefunktion kann festgestellt werden, in welchem Zustand sich das Netzwerk befindet.
+Durch das Hinzugeben einer Energiefunktion kann festgestellt werden, in welchem Zustand sich das Netzwerk befindet. 
+Hiermit kann ein Haltepunkt definiert werden, ab welchem keine Trainingsiteration mehr durchlaufen werden soll. 
 
 \subsection{Boltzmann Machine}
 
@@ -487,7 +492,7 @@ Deep FeedForward Netzwerke unterscheiden sich von den normalen FeedForward Netzw
 NeuroEvolution of Augmenting Topologies (NEAT) Netzwerke sind relativ jung, wobei NEAT für einen Algorithmus steht, der Neuronale Netzwerke entwickelt.
 Er wurde von Stanley und Miikkulainen (2002) entwickelt. 
 Dieser Typ verwendet genetische Algorithmen, um die Struktur und die Gewichtungen im Netzwerk zu optimieren.
-Die Input- und Outputlayer sind identisch zu einem FeedForward Netzwerk.
+Die Input- und Outputlayer sind identisch mit einem FeedForward Netzwerk.
 Dafür fehlt diesem Type eine innere Struktur. 
 Die Verbindungen sind lose, nicht klar definiert und können während dem Entwickeln entfernt werden, aber auch wieder hinzugefügt werden.
 
@@ -516,14 +521,14 @@ Dies ermöglicht es komplexe Strukturen zu speichern und trotzdem die Speicherau
 
 \subsection{Recurrent Network}
 
-Sind Netzwerke, die nicht nur einen Kontrollfluss haben, sondern auch Rekursionen beinhalten. 
+Recurrent Network sind Netzwerke, die nicht nur einen Kontrollfluss haben, sondern auch Rekursionen beinhalten. 
 Diese Rekursionen können jedes andere Neuron ansprechen, ausgenommen der Neuronen im Inputlayer.
-Ein Problem durch Rekursionen sind endlos Schleifen, welche behandelt werden müssen.
+Ein Problem durch Rekursionen sind Endlosschleifen, welche behandelt werden müssen.
 So können Kontext Neuronen verwendet werden, aber auch eine definierte Anzahl an Iterationen durchlaufen werden, wo die Rekursion nicht mehr fortgeführt wird. 
 Eine weitere Option ist so lange zu warten, bis sich die Ausgabe des Neurons stabilisiert hat und sich nicht mehr ändert.
 Das Kontext Neuron nimmt dabei die Stelle eines kurzen Speichers ein, wo ein Zustand für die nächste Iteration zwischengespeichert wird.
 Die Informationen, die in einem solchen Neuron gespeichert werden, werden bei diesem Speichervorgang nicht gewichtet, sondern erst, wenn diese Informationen an das Netzwerk zurückgegeben werden.
-Diese Rekursionen werden vor allem in Fällen verwendet, wenn es um zeitliche Abläufe und Änderungen geht, wie zum Beispiel mit der Temperatur für den nächsten Tag, wo man Jahre an Daten zur Verfügung hat.
+Diese Rekursionen werden vor allem in Fällen verwendet, wenn es um zeitliche Abläufe und Änderungen geht, wie zum Beispiel bei der Temperatur für den nächsten Tag, wo man Daten etlicher vorangegangener Jahre zur Verfügung hat.
 
 %\subsection{Elman Network}
 \paragraph{Elman Network} wurde im Jahre 1990 vorgestellt, sie verwenden Rekursionen mit Kontext Neuronen. 
@@ -545,20 +550,20 @@ Das Kontext Neuron ist dabei nur mit dem Outputlayer wieder verbunden und nicht 
 	\label{fig:DomainMatrix}
 \end{figure}
 
-Wie in der Abbildung \ref{fig:DomainMatrix} erkennbar ist, existiert kein Netzwerk Grundtyp, der für alle Problemdomänen geeignet ist.
+Wie in der Abbildung \ref{fig:DomainMatrix} erkennbar ist, existiert kein Netzwerkgrundtyp, der für alle Problemdomänen geeignet ist.
 Dies führt zu der Schlussfolgerung, dass je nach Aufgabe und Ziel ein entsprechendes Grundgerüst gewählt werden muss. 
 Auf Basis dieses Grundgerüsts können uneingeschränkt weitere Eigenheiten aus anderen Netzwerken eingebaut werden.
-In der Praxis findet man selten ein Netzwerk von einem Typ für eine größer Problemstellung. 
-Das Problem wird herab gebrochen auf mehrere kleinere Probleme, welche hintereinander und parallel gelöst werden.
+In der Praxis findet man selten ein Netzwerk von nur einem Typ für eine größer Problemstellung. 
+Das Problem wird herab gebrochen auf mehrere kleinere Problemstellungen, welche hintereinander und teilweise parallel gelöst werden.
 %Meistens sind es einige mehrere Netzwerke unterschiedlicher Typen, die hintereinander und parallel geschalten sind und so ein ganzen System darstellen.
-Dabei übernimmt jedes Teilnetzwerk eine kleine Aufgabe des Gesamten und zwar eine für die es entwickelt wurde. 
+Dabei übernimmt jedes Teilnetzwerk eine kleine Aufgabe des Gesamten und zwar die eine, für die es entwickelt wurde. 
 Aktuelle Netzwerke wie das Inception v3 Netzwerk von Google Research benötigt zwei Wochen mit acht Grafikkarten zum Trainieren. 
-Ab diesem Zeitpunkt ist es im Stande akkurate Resultate zu liefern. 
-Dieses Netzwerk ist sehr komplex und besteht nicht nur aus 3 Ebenen, was zur Schlussfolgerung führt, dass umso tiefer das Netzwerk ist, umso aufwändiger  es zum Trainieren ist.
+Ab diesem Zeitpunkt ist es im Stande, akkurate Resultate zu liefern. 
+Dieses Netzwerk ist sehr komplex und besteht nicht nur aus 3 Ebenen, was zur Schlussfolgerung führt, dass je tiefer das Netzwerk ist, desto aufwändiger ist es zu trainieren.
 
 \section{Optimierung}
 
-Optimierungen beinflussen das Lernverhalten und das Speicherverhalten eines Netzwerkes.
+Optimierungen beeinflussen das Lernverhalten und das Speicherverhalten eines Netzwerkes.
 
 %Gegenmaßnahme -> dropout, Regulatoren 1/2, learnrate, momentum
 \paragraph{Lernrate} skaliert die Lerngeschwindigkeit, wie im Punkt Backpropagation beschrieben.
@@ -571,17 +576,17 @@ Hinton \cite{krizhevsky2012imagenet} beschreibt DropOuts als eine effektive Art,
 DropOut kann als System integriert werden, aber auch als eigener Layer in einem Netzwerk.
 In einem DropOutlayer werden immer Neuronen deaktiviert, inklusive ihrer Verbindungen zum nächsten Layer.
 Dies hat zur Folge, dass nur ein geringerer Teil an Informationen aus dem vorhergehenden Layer in den nächsten übergeht. 
-Durch diesen Prozess des künstlichen Geringhaltens von Informationen während dem Training führt dazu, dass das Netzwerk trotz dieser Einschränkung versucht ein gutes Ergebnis zu erzielen. 
-Während der Test- und Produktivphase werden diese DropOutlayer aber meist deaktiviert, da das volle Potenzial des Netzwerks verwendet werden möchte.
+Durch diesen Prozess des künstlichen Geringhaltens von Informationen während dem Training führt dazu, dass das Netzwerk trotz dieser Einschränkung versucht, ein gutes Ergebnis zu erzielen. 
+Während der Test- und Produktivphase werden diese DropOutlayer aber meist deaktiviert, da das volle Potenzial des Netzwerks verwendet werden soll.
 
-\paragraph{L1 und L2 Regularisierung} sind auch Techniken, die zur Verhinderung von Overfitting beitragen.
+\paragraph{L1 und L2 Regularisierung} sind ebenfalls Techniken, die zur Verhinderung von Overfitting beitragen.
 Im Gegensatz zu der DropOut Strategie sind diese zwei Regularisierungstechniken Teil der Backpropagation oder werden als Funktion eingesetzt.
 Beide Techniken arbeiten mit Strafen, welche verteilt werden und so die Gewichtungen vor dem Ausarten hindern. 
 %TODO objective functions -> simulated annealing
 %Im Falle von L1 ähnelt dieses Muster einer Gaussian Glockenkurve und bei L2 einer Laplace Kurve.
 Durch das Bestrafen der Gewichtungen im Netzwerk werden diese Werte gering gehalten. %, sodass sie nicht ausarten. 
 Wenn ein Gewicht Richtung $0$ geht, führt dies unweigerlich zu einem indirekten Ausschluss aus dem Netzwerk.
-Das Netzwerk wird spärlicher und leichtgewichtiger, was aber wiederum als Resultat hat, dass ein Rauschen in den Daten ignoriert wird.
+Das Netzwerk wird spärlicher und leichtgewichtiger, was aber wiederum das Resultat hat, dass ein Rauschen in den Daten ignoriert wird.
 
 \begin{equation}
 	E := \frac{\lambda}{n} \sum |w|
@@ -599,7 +604,7 @@ Dies ist erforderlich, da diese Funktion bei jeder Evaluierung der Trainingsdate
 \section{Trainingsgeschwindigkeitssteigerung}
 
 \paragraph{GPU - GPGPU} ist die Bezeichnung für die Verwendung des Grafikprozessors über seine ursprüngliche Auslegung darüber hinaus.
-In der aktuellen Zeit ist es nicht mehr möglich eine Geschwindigkeitssteigerung zu erreichen, in dem die Taktrate des Prozessors erhöht wird. 
+In der aktuellen Zeit ist es nicht mehr möglich, eine Geschwindigkeitssteigerung zu erreichen, indem die Taktrate des Prozessors erhöht wird. 
 Deshalb wird mehr parallelisiert, da die Recheneinheiten kleiner werden und so mehrere auf derselben Fläche Platz finden. 
 Eine Grafikkarte besitzt die Eigenschaft, gleichförmige Operationen in einem Schritt auf sehr viele Objekte gleichzeitig auszuführen. 
 So werden viele Pixel auf einmal eingefärbt oder eine Multiplikation großer Matrizen. 
@@ -610,7 +615,7 @@ Der Geschwindigkeitsvorteil kommt dabei durch den hohen Grad an Parallelität, d
 führt dazu, dass immer ein Paket an Daten in das System eingeführt wird. 
 Dieses Paket wird je nach Implementierung parallel verarbeitet oder sequenziell. 
 Der Unterschied zu 'Online Learning' ist nun, dass nicht nach jedem Datensatz die Gewichtungen und das System nachjustiert wird, sondern dass zuerst das Paket verarbeitet wird und das System einmal angepasst wird. 
-Im genauen werden die Gradienten zusammen gerechnet und einmal auf den Graphen adaptiert \cite{AI3}.
+Im genauen werden die Gradienten zusammengerechnet und einmal auf den Graphen adaptiert \cite{AI3}.
 %Wenn also ein Paket mit einer Größe von $64$ in das System eingeführt wird, führt dies einmal zu einer Anpassung des Graphen, in dem die Gradienten zusammen gerechnet werden und einmal auf den Graphen adaptiert werden \cite{AI3}. 
 
 %\section{Tensorflow Typen Unterstützung}
