--- a/einleitung.tex
+++ b/einleitung.tex
@@ -4,24 +4,24 @@
 \section{Motivation}
 
 %Zeitlich immer mehr Relevant
-Kaum ein Gebiet existiert so lange wie maschinelles Lernen und erlebte in den letzten 20 Jahren so einen Aufschwung in den Punkten Relevanz, Weiterentwicklung und Alltagstauglichkeit wie kein anderes Gebiet der Informationstechnologie. 
-Ein Umstand dafür ist unter anderem die technische Voraussetzung große System zu entwickeln und diese auch der Menschheit zugänglich zu machen. 
-Im speziellen wurde hierbei der Fokus auf neuronale Netzwerke gelegt welche noch heute weiter erforscht werden, aber auch schon im Einsatz sind. \newline
+Kaum ein Gebiet existiert so lange wie maschinelles Lernen und erlebte in den letzten 20 Jahren einen Aufschwung in den Punkten Relevanz, Weiterentwicklung und Alltagstauglichkeit wie kein anderes Gebiet der Informationstechnologie. 
+Ein Umstand dafür ist unter anderem die technische Voraussetzung große Systeme zu entwickeln und diese auch der Menschheit zugänglich zu machen. 
+Im Speziellen wurde hierbei der Fokus auf neuronale Netzwerke, gelegt welche noch weiter erforscht werden, aber auch schon im Einsatz sind. \newline
 
 \noindent
-Die großen Datenmengen die in den letzten Jahren zu verarbeiten und zu analysieren sind, stellen ein Problem dar. 
+Die großen Datenmengen, die in den letzten Jahren zu verarbeiten und zu analysieren sind, stellen ein Problem dar. 
 So befindet sich kein Mensch in der Lage, effizient Millionen an Datensätzen zu analysieren und Zusammenhänge darin zu finden und dies in adäquater Zeit zu tun. \newline
 %\noindent
 %Eine sehr hartnäckige Behauptung im Zusammenhang mit maschinellem Lernen ist, dass dieses Spiel aufgrund der vielen strategischen Elemente nicht erfolgreich
 %durch eine Maschine gespielt werden kann.
 
 \noindent
-Im Zuge dieser Arbeit sollen die Grundlagen im Bereich maschinellen Lernens, im Speziellen mit neuronalen Netzwerken näher gebracht werden. 
-Dabei sollte gezeigt werden, wie weit sich diese in der Praxis einsetzen lassen. 
+Im Zuge dieser Arbeit sollen die Grundlagen im Bereich des maschinellen Lernens, im Speziellen mit neuronalen Netzwerken näher gebracht werden. 
+Dabei soll gezeigt werden, wie weit sich diese in der Praxis einsetzen lassen. 
 
 \section{Problemstellung}
 
-Die grundlegende Problemstellung lässt sich in einer Frage beschreiben. \newline
+Die grundlegende Problemstellung lässt sich mit folgender Frage beschreiben: \newline
 
 Wie weit ist TensorFlow als Bibliothek im Gebiet des maschinellen Lernens in praktischen Fällen einsatzfähig? \newline
 
@@ -30,11 +30,11 @@ In dieser Frage stecken mehrere nichttriviale Punkte.
 
 \noindent
 Ein Punkt stellt das Gebiet des maschinellen Lernens generell dar, sowie die praktische Umsetzung von Problemstellungen. 
-Im Speziellen bieten neuronale Netzwerke neue Möglichkeiten Probleme in der Informationstechnologie zu lösen, sowie Vorgänge in der Natur besser zu verstehen. \newline
+Im Speziellen bieten neuronale Netzwerke neue Möglichkeiten, Probleme in der Informationstechnologie zu lösen, sowie Vorgänge in der Natur besser zu verstehen. \newline
 
 \noindent
-Zum anderen was ist TensorFlow, für was steht dies und für was kann dies eingesetzt werden?  
-Denn diese Bibliothek bietet eine gute Unterstützung sich dem Gebiet des maschinellen Lernens zu nähern aber auch die Möglichkeit dies in praktischen Fällen einzusetzen. 
+Zum anderen die Frage, was ist TensorFlow, wo steht dies und wofür was dies eingesetzt werden?  
+Diese Bibliothek bietet eine gute Unterstützung, sich dem Gebiet des maschinellen Lernens zu nähern, aber auch die Möglichkeit, dies in praktischen Fällen einzusetzen. 
 
 %Des Weiteren wird dies auch durch die großen Datenmassen weiter getrieben, da diese weder von einem Menschen noch von einem Algorithmus effizient analysiert werden können. 
 %Dies kommt zustande, da sich die Daten sehr schnell verändern mit welchen meist gearbeitet wird und somit ein klassischer Algorithmus erst angepasst werden muss. 
@@ -44,23 +44,23 @@ Denn diese Bibliothek bietet eine gute Unterstützung sich dem Gebiet des maschi
 
 %Einführung in das Thema NNN
 
-Die Arbeit soll das Thema maschinelles Lernen - neuronale Netzwerke so beleuchten, dass es möglich ist diese mit den Grundlagen zu verstehen und zu erlernen. 
-Im Weiteren wird die Bibliothek TensorFlow näher gebracht, welche eine gute Unterstützung bietet, eine Problemstellung zu lösen und diese Lösung direkt in einer Applikation einzusetzen. \newline
+Die Arbeit soll das Thema maschinelles Lernen - neuronale Netzwerke so beleuchten, dass es möglich ist, diese mit den Grundlagen zu verstehen und zu erlernen. 
+Des Weiteren wird die Bibliothek TensorFlow näher gebracht, welche eine gute Unterstützung bietet, eine Problemstellung zu lösen und diese Lösung direkt in einer Applikation einzusetzen. \newline
 
 \noindent
 Die Betrachtung der benötigten Punkte sowie Gebiete sollte auf breiter Front erfolgen, am Ende sollte jeder Leser ein Verständnis dafür haben. 
-Außerdem sollte er in der Lage sein den Umfang einer solchen Aufgabenstellung fest zu stellen. 
-Als Konsequenz aus dieser Betrachtungsweise können allerdings nicht alle Punkte sehr genau erfasst werden. 
+Außerdem sollte er in der Lage sein können, den Umfang einer solchen Aufgabenstellung festzustellen. 
+Als Konsequenz aus dieser Betrachtungsweise können allerdings nicht alle Punkte in ihrer ganzen Tiefe erfasst werden. 
 %Insbesondere wenn es thematisch in die Tiefe geht. 
-Hier ist es erforderlich noch weiter Lektüre einzubeziehen und diese zu studieren. \newline
+Hier wäre es erforderlich, noch weitere Lektüre einzubeziehen und diese zu studieren. \newline
 
 \noindent
-Im Ende der Arbeit wird eine möglichen Lösung für ein praktisches Beispiel entwickelt und näher erklärt.
+Am Ende der Arbeit wird eine mögliche Lösung für ein praktisches Beispiel entwickelt und näher erklärt.
 Dieses wird als praktische Repräsentation verwendet, um den Umfang der Bibliothek noch besser zu verstehen. \newline
 
 \noindent
-Die Wissensvermittlung, dass sich mit dieser Technik der Datenanalyse, jegliche Problemstellung lösen lässt, ist ausdrücklich kein Ziel dieser Arbeit. 
-Des Weiteren wird teilweise nicht tiefer auf Themen eingegangen, da dies den Rahmen dieser Arbeit übertreffen würde. 
+Der Anspruch, dass sich mit dieser Technik der Datenanalyse jegliche Problemstellung gelöst werden kann, ist ausdrücklich kein Ziel dieser Arbeit. 
+Des Weiteren wird teilweise nicht tiefer auf Themen eingegangen, da dies den Rahmen dieser Arbeit übersteigen würde. 
 Diese Arbeit sollte aber als möglicher Startpunkt, für einen Einstieg in die Welt des maschinellen Lernens - neuronale Netzwerke dienen. 
 
 
