--- a/zusammenfassungAusblick.tex
+++ b/zusammenfassungAusblick.tex
@@ -5,26 +5,26 @@
 
 %Maschinelles Lernen sehr einsatzfähig
 \noindent
-Maschinelles Lernen bietet sich an, in sehr vielen Fällen eingesetzt zu werden. 
-Es steht aber fest, dass neuronale Netzwerke nicht etwas außergewöhnliches erschaffen oder gar von sich aus etwas Unvorhersehbares produzieren. 
+Maschinelles Lernen bietet sich an, in sehr vielen aufzuteilen Fällen eingesetzt zu werden. 
+Es steht aber fest, dass neuronale Netzwerke nichts Außergewöhnliches erschaffen oder gar von sich aus etwas Unvorhersehbares produzieren. 
 Im Kern kann jeder Zustand eines Netzwerkes festgestellt werden und somit auch nachvollzogen werden, beziehungsweise mathematisch nachgerechnet werden. 
 Grundsätzlich kann jedes Problem, welches sich in irgendeiner Art und Weise als Funktion beschreiben lässt, in einem neuronalen Netzwerk abgebildet werden kann. \newline
 
 %erlernbar & Vertiefen 
 \noindent
 Das Gebiet des maschinellen Lernens bietet einen nicht abschätzbare Umfang an Möglichkeiten. 
-Trotzdem kann es auf einfache Grundregeln der Mathematik und Informatik herab gebrochen werden und somit auch erlernt werden. 
+Trotzdem kann es auf einfache Grundregeln der Mathematik und Informatik herabgebrochen werden und somit auch erlernt werden. 
 Gesamt wird es aber praktisch nie möglich sein, das gesamte Gebiet komplett zu verstehen und zu kennen.
-Es wird eine Möglichkeit geben sich weiter zu bilden und zu vertiefen. 
-Sollte trotzdem der Punkt erreicht werden an dem nichts neues mehr gelernt werden kann, dann sollte diese Möglichkeit dazu führen die Forschung anzutreiben und so für eine Weiterentwicklung zu sorgen. \newline
+Es wird eine Möglichkeit geben, sich weiter zu bilden und zu vertiefen. 
+Sollte trotzdem der Punkt erreicht werden, an dem nichts Neues mehr gelernt werden kann, dann sollte diese Möglichkeit dazu führen, die Forschung anzutreiben und so für eine Weiterentwicklung zu sorgen. \newline
 
 %Zeitaufwändig bauen und trainieren & ressourcen intensive
 \noindent
 Ein Nachteil im Bereich des Machine Intelligence ist, dass sehr viel Zeit in das Entwickeln, Trainieren und Testen gesteckt werden muss. 
-Aus diesem Grund entwickelte Google einen eigenen Prozessor welcher nur für solche Berechnungen ausgelegt worden ist. 
-In diesen Fall ist dies eine Tensor Processing Unit (TPU) \footnote{TPU: \url{https://cloudplatform.googleblog.com}} welche auch im AlphaGO Projekt zum Beispiel zum Einsatz kommt. 
-Aus diesem Grund wurde der Großteil der Berechnungen für das Beispiel auf einer TitanX von Nvidia durchführt, welcher im Zuge dieser Arbeit zur Verfügung gestellt worden ist. 
-Trotzdem ist die Zeit in welcher eine algorithmische Lösung entwickelt wird meist bei weitem höher, was auch erklärt warum in diesem Gebiet seit einer Zeit sehr viel Forschung betrieben wird. 
+Aus diesem Grund entwickelte Google einen eigenen Prozessor, welcher nur für solche Berechnungen ausgelegt worden ist. 
+In diesem Fall ist dies eine Tensor Processing Unit (TPU) \footnote{TPU: \url{https://cloudplatform.googleblog.com}}, welche auch im AlphaGO Projekt zum Beispiel zum Einsatz kommt. 
+Aus diesem Grund wurde der Großteil der Berechnungen für das Beispiel auf einer TitanX von Nvidia durchführt, welche für dieser Arbeit zur Verfügung gestellt worden ist. 
+Trotzdem ist die Zeit, in der eine algorithmische Lösung entwickelt wird, meist bei weitem höher, was auch erklärt, warum in diesem Gebiet seit einiger Zeit sehr viel Forschung betrieben wird. 
 
 %\noindent
 %beispiel auf titanX mit einer durchlaufzeit von 84 Sekunden pro epoche
@@ -35,24 +35,24 @@ Trotzdem ist die Zeit in welcher eine algorithmische Lösung entwickelt wird mei
 
 %sehr weitläufig einsetzbar
 \noindent
-Machine Intelligence und im speziellen TensorFlow sind Techniken und Tools welche sehr weitläufig eingesetzt werden können. 
+Machine Intelligence und im Speziellen TensorFlow sind Techniken und Tools, welche sehr weitläufig eingesetzt werden können. 
 Im Detail kann TensorFlow oft zu Problemen führen, da diese Bibliothek praktisch keine Einschränkungen besitzt. 
-Da dies aber auf einem zu geringen beziehungsweise technisch hohen Level agiert, wo sich der Benutzer sehr gut mit der Materie auskennen muss, existieren zu diesem Zweck Abstraktionen wie zum Beispiel Keras\footnote{Keras: \url{https://keras.io/}}. 
-Die Möglichkeit von TensorFlow nicht nur CPU's und GPU's in einer Recheneinheit zu verwenden, sondern die Entwicklung auch auf mehrere Recheneinheiten zu verteilen und dies mit Unterstützung aus der Bibliothek macht es zu einem sehr vielfältigen und einsatzfähigen Tool. 
-Zusätzlich die Möglichkeit direkt ein System in Produktion zu nehmen und dies mit wenig Aufwand, stellt einen weiteren Vorteil dar. \newline
+Da dies aber auf einem zu geringen, beziehungsweise technisch hohen Level agiert, wo sich der Benutzer sehr gut mit der Materie auskennen muss, existieren zu diesem Zweck Abstraktionen, wie zum Beispiel Keras\footnote{Keras: \url{https://keras.io/}}. 
+Die Möglichkeit von TensorFlow nicht nur CPU's und GPU's in einer Recheneinheit zu verwenden, sondern die Entwicklung auch auf mehrere Recheneinheiten zu verteilen und dies mit Unterstützung aus der Bibliothek, macht es zu einem sehr vielfältigen und einsatzfähigen Tool. 
+Zusätzlich stellt die Möglichkeit, direkt ein System in Produktion zu nehmen und dies mit wenig Aufwand, stellt einen weiteren Vorteil dar. \newline
 
 %immer mehr relevant, nicht explizit entwickelter code sondern selbst entwickelte strukturen
 \noindent
-Die Idee etwas nicht explizit zu Programmieren sondern das System die Muster oder die Lösung selber finden zu lassen, wird in Zukunft sehr wahrscheinlich noch sehr viel öfter zu sehen sein. 
-In diesem Fall wird es ein Austauschformat geben müssen, mit welchem solche Systeme ausgetauscht werden können, wie in der aktuellen Zeit mit Protokollen Daten ausgetauscht werden und Logik mit Mathematik und Programmiersprachen abgebildet wird. 
-Eine Mischform existiert hier zu bereits von Microsoft und der Universität Cambridge \cite{deepcoder-learning-write-programs}, indem ein Machine Intelligence System eine Problemstellung entgegennimmt und durch Hilfe von bestehenden Code automatisch ein Programm entwickelt welches die gegebenen Problemstellung löst. 
+Die Idee, etwas nicht explizit zu programmieren, sondern das System die Muster oder die Lösung selber finden zu lassen, wird in Zukunft sehr wahrscheinlich noch sehr viel öfter zu sehen sein. 
+In diesem Fall wird es ein Austauschformat geben müssen, mit welchem solche Systeme ausgetauscht werden können, wie heutzutage mit Protokollen Daten ausgetauscht werden und Logik mit Mathematik und Programmiersprachen abgebildet wird. 
+Eine Mischform existiert hier bereits von Microsoft und der Universität Cambridge \cite{deepcoder-learning-write-programs}, in dem ein Machine Intelligence System eine Problemstellung entgegennimmt und mit Hilfe von bestehenden Code automatisch ein Programm entwickelt, das die gegebenen Problemstellung löst. 
 In diesem Fall werden Codeteile zusammen kopiert und so zu einem Programm ausgebaut. \newline
 
 %unüberwachtes lernen im sinne eines kindes beim lernen
 \noindent
-Ein Gebiet welches zur Zeit sehr stark noch erforscht wird, ist das unüberwachte Lernen. 
-Es stellt eine Möglichkeit dar, das menschliche Hirn und auch die Natur noch besser zu verstehen, birgt aber selbst sehr viel unbekanntes. 
-So arbeiten Forscher auf der gesamten Wert daran diese Technik zu erklären und zu verstehen. 
+Ein Gebiet, das zurzeit noch sehr stark erforscht wird, ist das unüberwachte Lernen. 
+Es stellt eine Möglichkeit dar, das menschliche Hirn und auch die Natur noch besser zu verstehen, birgt aber selbst sehr viel Unbekanntes. 
+So arbeiten Forscher auf der gesamten Welt daran, diese Technik zu erklären und zu verstehen. 
 
 
 %grundlagen vertiefen
